--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,40 @@
-venv/
-.env
-Setup.txt
-venv
 
+venv/
 __pycache__/
 *.pyc
 *.pyo
-.env
+*.pyd
 *.db
 *.sqlite3
-.vscode/
-.idea/
-.DS_Store
-Thumbs.db
-videos.db
+*.env
 
-
-
-logs
+logs/
 *.log
+
+.env
+*.env.local
+
+node_modules/
+dist/
+dist-ssr/
+*.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+
 lerna-debug.log*
-node_modules
-dist
-dist-ssr
-*.local
-.vscode/*
-!.vscode/extensions.json
-.idea
+
+.vscode/
+.idea/
 .DS_Store
+Thumbs.db
+
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
+videos.db
+Setup.txt
